# standup-report

./: .gitignore  .mypy.ini  Makefile  README.md  config.yml  config.yml.example  package-lock.json  package.json  pyproject.toml
standup_report/: app.py  calendar_type.py  date_utils.py  dict_utils.py  enum_utils.py  exceptions.py  ignore_mixin.py  issue_type.py  note_utils.py  pr_type.py  settings.py
standup_report/duckdb_client/: __init__.py  client.py  ignoring.py  notes.py
standup_report/github/: __init__.py  client.py  gql_utils.py  prs.graphql  prs.py  response_utils.py
standup_report/google/: __init__.py  auth.py  client.py  events.py
standup_report/linear/: __init__.py  activity.graphql  activity.py  client.py  open_issues.graphql  open_issues.py  pr_attach.py  schema_docs.graphql
standup_report/remote/: base_client.py  response_utils.py
standup_report/routes/: db.py  google_auth.py  home.py  ignore_api.py  notes_api.py  report.py
standup_report/static/css/: report.css
standup_report/static/js/: report.js
standup_report/templates/: _activity_item.html  _filter.html  _ignore_btn.html  _link_with_slack.html  _next_item.html  _note_input.html  base.html  home.html  report.html
standup_report/templates/components/: header.html
